2005-02-04  Frank Arnold  <farnold@cvs.gnome.org>

	* Locations.xml.in: Corrected two Wyoming locations.

2005-02-03  Jordi Mallach  <jordi@sindominio.net>

	* Locations.xml.in: Corrected some Catalan, Basque and Spanish
	names.

2005-02-03  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Fixed validity of XML file. Can people please
	  xmllint against the provided DTD. Thanks.

2005-02-02  Ole Laursen  <olau@hardworking.dk>

	* Locations.xml.in: Moved Vágar/Sørvágur to Faroe Islands, a
	country in Europe (they are not completely independent from
	Denmark, but nevertheless). Also fixed the order of the Danish
	stations.

2005-02-02  Žygimantas Beručka  <uid0@akl.lt>

	* Locations.xml.in: Corrected Lithuanian locations.

2005-02-02  Ole Laursen  <olau@hardworking.dk>

	* Locations.xml.in: Corrected some of the Danish locations.

2005-02-01  Raphael Higino  <raphaelh@cvs.gnome.org>

	* Locations.xml.in: Corrected Brazilian locations.

2005-01-29  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* Locations.xml.in: Some changes in Latino-american and Spanish strings.

2005-01-27  Jorn Baayen  <jbaayen@gnome.org>

	* Locations.xml.in:

	Tartu/Ulenurme -> Tartu/Ülenurme

2004-01-26  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: Fix #165114 (a stock icon name typo).

2004-01-24  Davyd Madeley  <davyd@madeley.id.au>

	* weather-metar.c: Parser fixes from Marius Gedminas
	  <mgedmin@b4net.lt>. Closes #164177.

2004-01-24  Davyd Madeley  <davyd@madeley.id.au>

	* weather.h: Correct calculation for hPa to inHg should be 1/33.86
	  (the reverse of the calculation for inHg to hPa). That makes it
	  0.029533373, not 0.02963742. Pressure given in details is now
	  correct.

2004-01-23  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Locations Love from Priit Laes <amd@tt.ee>. Closes
	  #164034.

2005-01-18  Benoît Dejean  <TazForEver@dlfp.org>

	* gweather-about.c: (gweather_about_run):