@@ -7777,11 +7777,7 @@
         <radar>btv</radar>
         <coordinates>44-27N 068-22W</coordinates>
       </location>
-      <location>
-        <_name>Bear Island</_name>
-        <code>K9B5</code>
-        <coordinates>44-17N 068-16W</coordinates>
-      </location>
+      <!-- Removed K9B5: Bear Island Light Station -->
       <location>
         <_name>Brunswick</_name>
         <code>KNHZ</code>
@@ -7789,11 +7785,7 @@
         <radar>btv</radar>
         <coordinates>43-54-01N 069-56-06W</coordinates>
       </location>
-      <location>
-        <_name>Cape Neddick</_name>
-        <code>K27B</code>
-        <coordinates>43-10N 070-36W</coordinates>
-      </location>
+      <!-- Removed K27B: Cape Neddick Light -->
       <location>
         <_name>Caribou</_name>
         <code>KCAR</code>
@@ -7807,16 +7799,8 @@
         <radar>btv</radar>
         <coordinates>46-37N 069-32W</coordinates>
       </location>
-      <location>
-        <_name>Eastport</_name>
-        <code>KEPO</code>
-        <coordinates>44-55N 067-00W</coordinates>
-      </location>
-      <location>
-        <_name>Egg Rock</_name>
-        <code>K8B9</code>
-        <coordinates>44-21N 068-08W</coordinates>
-      </location>
+      <!-- Removed KEP0: Eastport -->
+      <!-- Removed K8B9: Egg Rock Light -->
       <location>
         <_name>Frenchville</_name>
         <code>KFVE</code>
@@ -7830,38 +7814,16 @@
         <radar>btv</radar>
         <coordinates>43-59-21N 070-57-01W</coordinates>
       </location>
-      <location>
-        <_name>Goat Island</_name>
-        <code>K0B9</code>
-        <coordinates>43-20N 070-24W</coordinates>
-      </location>
-      <location>
-        <_name>Great Duck Island</_name>
-        <code>K14B</code>
-        <coordinates>44-09N 068-15W</coordinates>
-      </location>
+      <!-- Removed K0B9: Goat Island Light -->
+      <!-- Removed K14B: Great Duck Island Light -->
       <location>
         <_name>Greenville</_name>
         <code>KGNR</code>
         <coordinates>45-28N 69-35W</coordinates>
       </location>
-      <location>
-        <_name>Greenville</_name>
-        <code>K3B1</code>
-        <zone>MEZ010</zone>
-        <radar>btv</radar>
-        <coordinates>45-27-47N 069-33-06W</coordinates>
-      </location>
-      <location>
-        <_name>Halfway Rock</_name>
-        <code>K15B</code>
-        <coordinates>43-39N 070-02W</coordinates>
-      </location>
-      <location>
-        <_name>Heron Neck</_name>
-        <code>K16B</code>
-        <coordinates>44-02N 068-52W</coordinates>
-      </location>
+      <!-- Removed K3B1: Greenville Municipal Airport -->
+      <!-- Removed K15B: Halfway Rock Light -->
+      <!-- Removed K16B: Heron Neck Light -->
       <location>
         <_name>Houlton</_name>
         <code>KHUL</code>
@@ -7875,11 +7837,7 @@
         <zone>MEZ020</zone>
         <radar>btv</radar>
       </location>
-      <location>
-        <_name>Limeston</_name>
-        <code>KLIZ</code>
-        <coordinates>46-57N 067-53W</coordinates>
-      </location>
+      <!-- Removed KLIZ: Limestone - Loring AFB -->
       <location>
         <_name>Millinocket</_name>
         <code>KMLT</code>
@@ -7887,26 +7845,10 @@
         <radar>btv</radar>
         <coordinates>45-38-52N 068-41-31W</coordinates>
       </location>
-      <location>
-        <_name>Monhegan / Manana Island</_name>
-        <code>K18B</code>
-        <coordinates>43-46N 069-20W</coordinates>
-      </location>
-      <location>
-        <_name>Old Town</_name>
-        <code>KOLD</code>
-        <coordinates>44-57N 068-40W</coordinates>
-      </location>
-      <location>
-        <_name>Owl's Head</_name>
-        <code>K96B</code>
-        <coordinates>44-05N 069-02W</coordinates>
-      </location>
-      <location>
-        <_name>Portland Head</_name>
-        <code>K2B8</code>
-        <coordinates>43-37N 070-12W</coordinates>
-      </location>
+      <!-- Removed K18B: Monhegan Island Light / Manana Island Fog Station -->
+      <!-- Removed KOLD: Old Town -->
+      <!-- Removed K96B: Owl's Head Light -->
+      <!-- Removed K2B8: Portland Head Light -->
       <location>
         <_name>Portland</_name>
         <code>KPWM</code>
@@ -7928,16 +7870,8 @@
         <radar>btv</radar>
         <coordinates>44-04N 069-06W</coordinates>
       </location>
-      <location>
-        <_name>Rockland Coast Guard Station</_name>
-        <code>K20B</code>
-        <coordinates>44-06N 069-06W</coordinates>
-      </location>
-      <location>
-        <_name>Rumford</_name>
-        <code>KRUM</code>
-        <coordinates>44-32N 070-32W</coordinates>
-      </location>
+      <!-- Removed K20B: Rockland Coast Guard Station -->
+      <!-- Removed KRUM: Rumford -->
       <location>
         <_name>Sanford</_name>
         <code>KSFM</code>
@@ -7945,21 +7879,9 @@
         <radar>btv</radar>
         <coordinates>43-24N 070-43W</coordinates>
       </location>
-      <location>
-        <_name>Seguin Island</_name>
-        <code>K23B</code>
-        <coordinates>43-40N 069-46W</coordinates>
-      </location>
-      <location>
-        <_name>Southwest Harbor</_name>
-        <code>KH32</code>
-        <coordinates>44-16N 068-19W</coordinates>
-      </location>
-      <location>
-        <_name>Turin</_name>
-        <code>K3B5</code>
-        <radar>btv</radar>
-      </location>
+      <!-- Removed K23B: Seguin Island Light -->
+      <!-- Removed KH32: Southwest Harbor Coast Guard Station -->
+      <!-- Removed K3B5: Turin -->
       <location>
         <_name>Waterville</_name>
         <code>KWVL</code>
@@ -7967,16 +7889,8 @@
         <radar>btv</radar>
         <coordinates>44-32N 069-41W</coordinates>
       </location>
-      <location>
-        <_name>West Jonesport</_name>
-        <code>K20J</code>
-        <coordinates>44-32N 067-37W</coordinates>
-      </location>
-      <location>
-        <_name>West Quoddy Head</_name>
-        <code>K24B</code>
-        <coordinates>44-48N 066-57W</coordinates>
-      </location>
+      <!-- Removed K20J: West Jonesport Coast Guard Station -->
+      <!-- Removed K24B: West Quoddy Head Light -->
       <location>
         <_name>Wiscasset</_name>
         <code>KIWI</code>
@@ -7984,11 +7898,7 @@
         <radar>btv</radar>
         <coordinates>43-57-49N 069-42-42W</coordinates>
       </location>
-      <location>
-        <_name>Wood Island</_name>
-        <code>K94B</code>
-        <coordinates>43-27N 070-19W</coordinates>
-      </location>
+      <!-- Removed K94B: Wood Island Light -->
     </state>
     <state>
       <_name>Maryland</_name>
@@ -15363,7 +15273,7 @@
         <coordinates>46-17N 124-03W</coordinates>
       </location>
       <location>
-        <_name>Cape Lattery</_name>
+        <_name>Cape Flattery</_name>
 	<code>K93S</code>
         <coordinates>48-23N 124-44W</coordinates>
       </location>
