@@ -1,3 +1,9 @@
+2005-02-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: Locations love for:
+		- #165212 Maine, Chris Hollenbeck <chris.hollenbeck@gmail.com>
+		- #166497 Cape Flattery, <klevin@eskimo.com>
+
 2005-02-04  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* Locations.xml.in: Corrected two Wyoming locations.
